fix: Added css so that when on iphone, there is a margin to the top so that navbar is usable

--- a/InnerLog/src/styles/globals.css
+++ b/InnerLog/src/styles/globals.css
@@ -160,6 +160,6 @@ body {
   padding-bottom: env(safe-area-inset-bottom);
 }
 
-.header {
-  padding-top: calc(16px + env(safe-area-inset-top));
-}
+
+
+
